# allRGB

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: allrgb.cc  allrgb.hh  fwd.hh  octree.cc  octree.hh  transformer.cc  transformer.hh
